--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -245,13 +245,13 @@
     src: url('"Edwardian Script ITC"') format('truetype');
   } */
    
-  #college-title {
+ /* #college-title {
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
     max-width: 100%;
   }
-  
+  */
     
     
     
